--- a/index.qmd
+++ b/index.qmd
@@ -1,14 +1,5 @@
 ---
-title: "Álgebra para el Grado en Estadística"
+title: "Ejemplo Quarto Geogebra"
 ---
 
-
-Esta página contiene una serie de guiones sobre la asignatura de Álgebra para el Grado en Estadística. Los contenidos se pueden usar en cualquier asignatura de Álgebra Lineal.
-
-En los repositorios <a href="https://github.com/pedritomelenas/R-algebra-lineal">Álgebra lineal con R</a> y <a href="https://github.com/pedritomelenas/Python-algebra-lineal">Álgebra lineal con Python</a> se encuentran ejemplos hechos en <code>R</code> y <code>Python</code> que complementan los guiones que aquí se proponen.
-
-Alguno de los guiones está aún en fase borrador. Si detecta algún error, por favor informe a través del <a href="https://github.com/pedritomelenas/Algebra-Lineal/issues">portal de errores</a> de este <a href="https://github.com/pedritomelenas/Algebra-Lineal">repositorio</a>.
-
-
-Los cuestionarios de autoevaluación están hechos con <a href="https://app.lumi.education/">LUMI</a>, que usa <a href="https://h5p.org/">h5p</a>.
-
+Algo de texto por aquí
